discussion/kv_engine/173470/173470_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Initial RangeScan infrastructure

This commit adds very basic RangeScan support and tests.

A RangeScan object is defined which is an object that is intended to
be created in response to a range-scan request command. The object
itself will then be driven through various states by a mixture of
I/O tasks (opening and scanning disk) and frontend threads requesting
create/continue/cancel. The RangeScan object is given a number of
parameters, primarily the "handler" which abstracts the end point
for keys and values that are read in the scan. Test code defines
a handler that just stored key/values in a vector.

A RangeScanOwner object is defined that is the owner of all scans
against a vbucket. The RangeScanOwner object provides methods that
move a scan through its lifetime state - Idle, Continue, Cancel

The code in range_scan_test shows the current abilities of this commit,
configuring scans for various ranges (key or value) and also checking a
number of invariants regarding the ordering of client operations. There
are no limits defined so each scan returns the entire range in one
continue.

Change-Id: I694dee94902bcaa13dd4d509da9a9edc5cb94148

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-12 09:08:16.000000000
Message: 
Uploaded patch set 12: New patch set was added with same tree, parent, and commit message as Patch Set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-12 09:17:01.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45235/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\vbucket.h(27): fatal error C1083: Cannot open include file: "memcached/range_scan_flags.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45235/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37999/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.h:27:10:
fatal error: "memcached/range_scan_flags.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37999/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16638/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:17:10: error: "memcached/range_scan_flags.h" file not found [clang-diagnostic-error]
#include <memcached/range_scan_flags.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:27:10: error: "memcached/range_scan_flags.h" file not found [clang-diagnostic-error]
#include <memcached/range_scan_flags.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16638/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:17:10:
error: "memcached/range_scan_flags.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6290/ : FAILURE

Compile error at [2022-04-12T09:11:20.685Z] ../kv_engine/engines/ep/src/vbucket.h:27:10:
fatal error: "memcached/range_scan_flags.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6290/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26819/ : FAILURE

Compile error at [2022-04-12T09:11:58.240Z] ../kv_engine/engines/ep/src/vbucket.h:27:10:
fatal error: "memcached/range_scan_flags.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26819/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18413/ : FAILURE

Compile error at [2022-04-12T09:10:57.582Z] ../kv_engine/engines/ep/src/vbucket.h:27:10:
fatal error: memcached/range_scan_flags.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18413/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18749/ : FAILURE

Compile error at [2022-04-12T09:10:38.290Z] ../kv_engine/engines/ep/src/vbucket.h:27:10:
fatal error: memcached/range_scan_flags.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18749/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19444/ : FAILURE

Compile error at [2022-04-12T09:11:05.759Z] ../kv_engine/engines/ep/src/vbucket.h:27:10:
fatal error: "memcached/range_scan_flags.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19444/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6352/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17509/ : FAILURE

Compile error at [2022-04-12T09:12:42.117Z] ../kv_engine/engines/ep/src/vbucket.h:27:10:
fatal error: "memcached/range_scan_flags.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17509/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15567/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
